[backend] feat(chaining): add workflow configuration (#4824)