@@ -3,12 +3,16 @@ package io.openaev.service.chaining;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-import io.openaev.database.model.Exercise;
-import io.openaev.database.model.Workflow;
-import io.openaev.database.model.WorkflowStatus;
+import io.openaev.api.chaining.WorkflowConfigurationMapper;
+import io.openaev.api.chaining.dto.WorkflowConfigurationInput;
+import io.openaev.api.chaining.dto.WorkflowScopeRuleInput;
+import io.openaev.database.model.*;
 import io.openaev.database.repository.WorkflowRepository;
 import io.openaev.rest.exception.ElementNotFoundException;
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -28,33 +32,29 @@ import org.mockito.junit.jupiter.MockitoExtension;
 class WorkflowServiceTest {
 
   @Mock private WorkflowRepository workflowRepository;
+  @Mock private WorkflowConfigurationMapper workflowConfigurationMapper;
 
   @InjectMocks private WorkflowService workflowService;
 
-  // ========================================================================
-  // getWorkflowById Tests
-  // ========================================================================
   @Nested
-  @DisplayName("getWorkflowById")
-  class GetWorkflowByIdTests {
+  @DisplayName("getWorkflowByIdAndStatus")
+  class GetWorkflowByIdAndStatusTests {
 
     @Captor private ArgumentCaptor<String> workflowIdCaptor;
 
     @Test
     @DisplayName("should return workflow when found")
     void shouldReturnWorkflowWhenFound() {
-      // Prepare
       String workflowId = UUID.randomUUID().toString();
       Workflow workflow = mock(Workflow.class);
       workflow.setStatus(WorkflowStatus.TEMPLATE);
+
       when(workflowRepository.findByIdAndStatus(workflowId, WorkflowStatus.TEMPLATE))
           .thenReturn(Optional.of(workflow));
 
-      // Act
       Workflow result =
           workflowService.getWorkflowByIdAndStatus(workflowId, WorkflowStatus.TEMPLATE);
 
-      // Assert
       verify(workflowRepository)
           .findByIdAndStatus(workflowIdCaptor.capture(), eq(WorkflowStatus.TEMPLATE));
       assertEquals(workflowId, workflowIdCaptor.getValue());
@@ -64,26 +64,22 @@ class WorkflowServiceTest {
 
     @Test
     @DisplayName("should throw ElementNotFoundException when not found")
-    void shouldThrowExceptionWhenNotFound() {
-      // Prepare
+    void shouldThrowWhenWorkflowNotFound() {
       String workflowId = UUID.randomUUID().toString();
       when(workflowRepository.findByIdAndStatus(workflowId, WorkflowStatus.TEMPLATE))
           .thenReturn(Optional.empty());
 
-      // Act & Assert
       ElementNotFoundException exception =
           assertThrows(
               ElementNotFoundException.class,
               () -> workflowService.getWorkflowByIdAndStatus(workflowId, WorkflowStatus.TEMPLATE));
+
       assertEquals(
           "Workflow TEMPLATE not found. Workflow ID : " + workflowId, exception.getMessage());
       verify(workflowRepository).findByIdAndStatus(workflowId, WorkflowStatus.TEMPLATE);
     }
   }
 
-  // ========================================================================
-  // creationWorkflow Tests
-  // ========================================================================
   @Nested
   @DisplayName("creationWorkflow")
   class CreationWorkflowTests {
@@ -91,26 +87,24 @@ class WorkflowServiceTest {
     @Captor private ArgumentCaptor<Workflow> workflowCaptor;
 
     @Test
-    @DisplayName("should create workflow template for exercise")
-    void shouldCreateWorkflowTemplate() {
-      // Prepare
+    @DisplayName("should create workflow template with inline configuration defaults")
+    void shouldCreateWorkflowTemplateWithInlineConfigurationDefaults() {
       Exercise exercise = mock(Exercise.class);
 
-      // Act
       workflowService.creationWorkflow(exercise);
 
-      // Assert
       verify(workflowRepository).save(workflowCaptor.capture());
       Workflow savedWorkflow = workflowCaptor.getValue();
       assertEquals(0, savedWorkflow.getVersion());
       assertEquals(WorkflowStatus.TEMPLATE, savedWorkflow.getStatus());
       assertEquals(exercise, savedWorkflow.getSimulation());
+      // Configuration defaults stored inline on the workflow row
+      assertFalse(savedWorkflow.isRateLimitEnabled());
+      assertFalse(savedWorkflow.isTimeoutEnabled());
+      assertTrue(savedWorkflow.isSafeModeEnabled());
     }
   }
 
-  // ========================================================================
-  // updateWorkflowTemplate Tests
-  // ========================================================================
   @Nested
   @DisplayName("updateWorkflowTemplate")
   class UpdateWorkflowTemplateTests {
@@ -118,38 +112,36 @@ class WorkflowServiceTest {
     @Test
     @DisplayName("should mark workflow as edited")
     void shouldMarkWorkflowAsEdited() {
-      // Prepare
       String workflowId = UUID.randomUUID().toString();
       Workflow workflow = mock(Workflow.class);
-      when(workflowRepository.findById(workflowId)).thenReturn(Optional.of(workflow));
+      when(workflow.getWorkflowsExecuted())
+          .thenReturn(List.of(mock(Workflow.class))); // Simulate at least one run executed
+      when(workflowRepository.findByIdAndStatus(workflowId, WorkflowStatus.TEMPLATE))
+          .thenReturn(Optional.of(workflow));
 
-      // Act
       workflowService.updateWorkflowTemplate(workflowId);
 
       // Assert
-      verify(workflowRepository).findById(workflowId);
+      verify(workflowRepository).findByIdAndStatus(workflowId, WorkflowStatus.TEMPLATE);
       verify(workflow).setEdited(true);
       verify(workflowRepository).save(workflow);
     }
 
     @Test
-    @DisplayName("should throw exception when workflow not found")
+    @DisplayName("should throw ElementNotFoundException when workflow not found")
     void shouldThrowExceptionWhenNotFound() {
       // Prepare
       String workflowId = UUID.randomUUID().toString();
-      when(workflowRepository.findById(workflowId)).thenReturn(Optional.empty());
+      when(workflowRepository.findByIdAndStatus(workflowId, WorkflowStatus.TEMPLATE))
+          .thenReturn(Optional.empty());
 
-      // Act & Assert
       assertThrows(
-          NoSuchElementException.class, () -> workflowService.updateWorkflowTemplate(workflowId));
-      verify(workflowRepository).findById(workflowId);
+          ElementNotFoundException.class, () -> workflowService.updateWorkflowTemplate(workflowId));
+      verify(workflowRepository).findByIdAndStatus(workflowId, WorkflowStatus.TEMPLATE);
       verify(workflowRepository, never()).save(any());
     }
   }
 
-  // ========================================================================
-  // saveWorkflowRun Tests
-  // ========================================================================
   @Nested
   @DisplayName("saveWorkflowRun")
   class SaveWorkflowRunTests {
@@ -174,9 +166,6 @@ class WorkflowServiceTest {
     }
   }
 
-  // ========================================================================
-  // launchWorkflow Tests
-  // ========================================================================
   @Nested
   @DisplayName("launchWorkflow")
   class LaunchWorkflowTests {
@@ -185,23 +174,24 @@ class WorkflowServiceTest {
 
     @Test
     @DisplayName("should increment version when template is edited")
-    void shouldIncrementVersionWhenEdited() {
+    void shouldIncrementVersionWhenTemplateEdited() {
       // Prepare
       Exercise simulation = mock(Exercise.class);
-
-      Workflow workflowTemplate = mock(Workflow.class);
-      when(workflowTemplate.isEdited()).thenReturn(true);
-      when(workflowTemplate.getVersion()).thenReturn(1);
-      when(workflowTemplate.getSimulation()).thenReturn(simulation);
-
-      when(workflowRepository.save(any(Workflow.class))).thenReturn(workflowTemplate);
+      Workflow template = mock(Workflow.class);
+      when(template.isEdited()).thenReturn(true);
+      when(template.getVersion()).thenReturn(1);
+      when(template.getSimulation()).thenReturn(simulation);
+      when(template.getWorkflowScopeRules()).thenReturn(Collections.emptyList());
+      when(workflowRepository.save(any(Workflow.class)))
+          .thenAnswer(invocation -> invocation.getArgument(0));
 
       // Act
-      workflowService.launchWorkflow(workflowTemplate);
+      workflowService.launchWorkflow(template);
 
       // Assert
-      verify(workflowTemplate).setEdited(false);
-      verify(workflowTemplate).setVersion(2);
+      verify(template).setEdited(false);
+      verify(template).setVersion(2);
+      // two saves: one for template version bump, one for the run
       verify(workflowRepository, times(2)).save(any(Workflow.class));
     }
 
@@ -229,7 +219,7 @@ class WorkflowServiceTest {
 
     @Test
     @DisplayName("should create workflow run with correct properties")
-    void shouldCreateWorkflowRunWithCorrectProperties() {
+    void shouldCreateRunWithCorrectProperties() {
       // Prepare
       Exercise simulation = mock(Exercise.class);
       int version = 3;
@@ -238,7 +228,7 @@ class WorkflowServiceTest {
       when(workflowTemplate.isEdited()).thenReturn(false);
       when(workflowTemplate.getVersion()).thenReturn(version);
       when(workflowTemplate.getSimulation()).thenReturn(simulation);
-
+      when(workflowTemplate.getWorkflowScopeRules()).thenReturn(Collections.emptyList());
       when(workflowRepository.save(any(Workflow.class))).thenAnswer(i -> i.getArgument(0));
 
       // Act
@@ -255,28 +245,99 @@ class WorkflowServiceTest {
       assertEquals(workflowTemplate, savedRun.getWorkflowTemplate());
       assertFalse(savedRun.isEdited());
     }
+
+    @Test
+    @DisplayName("should copy inline configuration fields from template to run")
+    void shouldCopyInlineConfigurationFieldsFromTemplateToRun() {
+      // Prepare
+      Exercise simulation = mock(Exercise.class);
+
+      Workflow template =
+          Workflow.builder()
+              .status(WorkflowStatus.TEMPLATE)
+              .version(3)
+              .simulation(simulation)
+              .isEdited(false)
+              .rateLimitEnabled(true)
+              .maxAttempts(5)
+              .maxTemporalRateSeconds(15L)
+              .timeoutEnabled(true)
+              .timeoutSeconds(120L)
+              .safeModeEnabled(false)
+              .build();
+
+      when(workflowRepository.save(any(Workflow.class)))
+          .thenAnswer(invocation -> invocation.getArgument(0));
+
+      // Act
+      Workflow result = workflowService.launchWorkflow(template);
+
+      // Assert
+      assertTrue(result.isRateLimitEnabled());
+      assertEquals(5, result.getMaxAttempts());
+      assertEquals(15L, result.getMaxTemporalRateSeconds());
+      assertTrue(result.isTimeoutEnabled());
+      assertEquals(120L, result.getTimeoutSeconds());
+      assertFalse(result.isSafeModeEnabled());
+    }
+
+    @Test
+    @DisplayName("should copy scope rules as new instances linked to the run")
+    void shouldCopyScopeRulesAsNewInstancesLinkedToRun() {
+      // Prepare
+      Exercise simulation = mock(Exercise.class);
+
+      Workflow template =
+          Workflow.builder()
+              .status(WorkflowStatus.TEMPLATE)
+              .version(1)
+              .simulation(simulation)
+              .isEdited(false)
+              .build();
+
+      WorkflowScopeRule existingRule = new WorkflowScopeRule();
+      existingRule.setSelectedMode(ScopeRuleSelectedMode.WHITELIST);
+      existingRule.setRuleSource(ScopeRuleSource.MANUAL);
+      existingRule.setRuleValue("10.0.0.1");
+      existingRule.setValueType(ScopeRuleValueType.IP);
+      existingRule.setWorkflow(template);
+      template.setWorkflowScopeRules(List.of(existingRule));
+
+      when(workflowRepository.save(any(Workflow.class)))
+          .thenAnswer(invocation -> invocation.getArgument(0));
+
+      // Act
+      Workflow result = workflowService.launchWorkflow(template);
+
+      // Assert
+      // save called twice: once for the run, once for the scope-rule cascade
+      verify(workflowRepository, times(2)).save(any(Workflow.class));
+
+      List<WorkflowScopeRule> copiedRules = result.getWorkflowScopeRules();
+      assertEquals(1, copiedRules.size());
+      WorkflowScopeRule copiedRule = copiedRules.getFirst();
+      // new instance, not the same object
+      assertNotSame(existingRule, copiedRule);
+      assertEquals(existingRule.getRuleValue(), copiedRule.getRuleValue());
+      assertEquals(existingRule.getSelectedMode(), copiedRule.getSelectedMode());
+      assertSame(result, copiedRule.getWorkflow());
+    }
   }
 
-  // ========================================================================
-  // isSimulationChaining Tests
-  // ========================================================================
   @Nested
   @DisplayName("isSimulationChaining")
   class IsSimulationChainingTests {
 
-    @Captor private ArgumentCaptor<String> simulationIdCaptor;
-
-    private static Stream<Arguments> testCases() {
+    static Stream<Arguments> testCases() {
       return Stream.of(
-          Arguments.of("single workflow", List.of(mock(Workflow.class)), true),
-          Arguments.of(
-              "multiple workflows", List.of(mock(Workflow.class), mock(Workflow.class)), true),
-          Arguments.of("no workflows", Collections.emptyList(), false));
+          Arguments.of("single", List.of(mock(Workflow.class)), true),
+          Arguments.of("multiple", List.of(mock(Workflow.class), mock(Workflow.class)), true),
+          Arguments.of("none", Collections.emptyList(), false));
     }
 
-    @ParameterizedTest(name = "should return {2} when {0}")
+    @ParameterizedTest(name = "{0}")
     @MethodSource("testCases")
-    void shouldReturnCorrectResult(String name, List<Workflow> workflows, boolean expected) {
+    void shouldReturnExpectedResult(String caseName, List<Workflow> workflows, boolean expected) {
       // Prepare
       String simulationId = UUID.randomUUID().toString();
       when(workflowRepository.findAllBySimulation_Id(simulationId)).thenReturn(workflows);
@@ -285,85 +346,243 @@ class WorkflowServiceTest {
       boolean result = workflowService.isSimulationChaining(simulationId);
 
       // Assert
-      verify(workflowRepository).findAllBySimulation_Id(simulationIdCaptor.capture());
-      assertEquals(simulationId, simulationIdCaptor.getValue());
+      assertNotNull(caseName);
       assertEquals(expected, result);
+      verify(workflowRepository).findAllBySimulation_Id(simulationId);
     }
   }
 
-  // ========================================================================
-  // findWorkflowTemplateBySimulationId Tests
-  // ========================================================================
   @Nested
   @DisplayName("findWorkflowTemplateBySimulationId")
   class FindWorkflowTemplateBySimulationIdTests {
 
-    @Captor private ArgumentCaptor<String> simulationIdCaptor;
-
-    @Captor private ArgumentCaptor<WorkflowStatus> statusCaptor;
-
-    @Test
     @DisplayName("should return workflow template when found")
+    @Test
     void shouldReturnTemplateWhenFound() {
-      // Prepare
       String simulationId = UUID.randomUUID().toString();
-      Workflow workflowTemplate = mock(Workflow.class);
+      Workflow template = mock(Workflow.class);
       when(workflowRepository.findBySimulation_IdAndStatus(simulationId, WorkflowStatus.TEMPLATE))
-          .thenReturn(workflowTemplate);
+          .thenReturn(template);
 
-      // Act
-      Workflow result =
-          workflowService.findWorkflowTemplateBySimulationId(simulationId).orElse(null);
+      Optional<Workflow> result = workflowService.findWorkflowTemplateBySimulationId(simulationId);
 
-      // Assert
+      assertTrue(result.isPresent());
+      assertSame(template, result.orElseThrow());
       verify(workflowRepository)
-          .findBySimulation_IdAndStatus(simulationIdCaptor.capture(), statusCaptor.capture());
-      assertEquals(simulationId, simulationIdCaptor.getValue());
-      assertEquals(WorkflowStatus.TEMPLATE, statusCaptor.getValue());
-      assertEquals(workflowTemplate, result);
+          .findBySimulation_IdAndStatus(simulationId, WorkflowStatus.TEMPLATE);
     }
 
+    @DisplayName("should return empty when template not found")
     @Test
-    @DisplayName("should return null when template not found")
-    void shouldReturnNullWhenNotFound() {
-      // Prepare
+    void shouldReturnEmptyWhenNotFound() {
       String simulationId = UUID.randomUUID().toString();
       when(workflowRepository.findBySimulation_IdAndStatus(simulationId, WorkflowStatus.TEMPLATE))
           .thenReturn(null);
 
-      // Act
-      Workflow result =
-          workflowService.findWorkflowTemplateBySimulationId(simulationId).orElse(null);
+      Optional<Workflow> result = workflowService.findWorkflowTemplateBySimulationId(simulationId);
 
-      // Assert
-      assertNull(result);
+      assertTrue(result.isEmpty());
       verify(workflowRepository)
           .findBySimulation_IdAndStatus(simulationId, WorkflowStatus.TEMPLATE);
     }
   }
 
-  // ========================================================================
-  // deleteWorkflow Tests
-  // ========================================================================
   @Nested
   @DisplayName("deleteWorkflow")
   class DeleteWorkflowTests {
 
-    @Captor private ArgumentCaptor<String> workflowIdCaptor;
-
     @Test
-    @DisplayName("should delete workflow by id")
+    @DisplayName("should delete workflow by ID")
     void shouldDeleteWorkflowById() {
-      // Prepare
       String workflowId = UUID.randomUUID().toString();
 
-      // Act
       workflowService.deleteWorkflow(workflowId);
 
-      // Assert
-      verify(workflowRepository).deleteById(workflowIdCaptor.capture());
-      assertEquals(workflowId, workflowIdCaptor.getValue());
+      verify(workflowRepository).deleteById(workflowId);
       verifyNoMoreInteractions(workflowRepository);
+    }
+  }
+
+  @Nested
+  @DisplayName("getWorkflowConfiguration")
+  class GetWorkflowConfigurationTests {
+
+    @Test
+    @DisplayName("should return template workflow carrying inline configuration")
+    void shouldReturnTemplateWorkflow() {
+      // Prepare
+      String workflowId = UUID.randomUUID().toString();
+      Workflow workflow = mock(Workflow.class);
+      when(workflowRepository.findByIdAndStatus(workflowId, WorkflowStatus.TEMPLATE))
+          .thenReturn(Optional.of(workflow));
+
+      // Act
+      Workflow result = workflowService.getWorkflowConfiguration(workflowId);
+
+      // Assert
+      assertSame(workflow, result);
+      verify(workflowRepository).findByIdAndStatus(workflowId, WorkflowStatus.TEMPLATE);
+    }
+
+    @DisplayName("should throw ElementNotFoundException when workflow not found")
+    @Test
+    void shouldThrowWhenWorkflowMissing() {
+      String workflowId = UUID.randomUUID().toString();
+      when(workflowRepository.findByIdAndStatus(workflowId, WorkflowStatus.TEMPLATE))
+          .thenReturn(Optional.empty());
+
+      ElementNotFoundException exception =
+          assertThrows(
+              ElementNotFoundException.class,
+              () -> workflowService.getWorkflowConfiguration(workflowId));
+      assertEquals(
+          "Workflow TEMPLATE not found. Workflow ID : " + workflowId, exception.getMessage());
+      verify(workflowRepository).findByIdAndStatus(workflowId, WorkflowStatus.TEMPLATE);
+    }
+  }
+
+  @Nested
+  @DisplayName("updateWorkflowConfiguration")
+  class UpdateWorkflowConfigurationTests {
+
+    @Captor private ArgumentCaptor<Workflow> workflowCaptor;
+
+    @Test
+    @DisplayName("should apply input to workflow and save it")
+    void shouldApplyInputToWorkflowAndSaveIt() {
+      // Prepare
+      String workflowId = UUID.randomUUID().toString();
+      Workflow workflow = mock(Workflow.class);
+      WorkflowConfigurationInput input = mock(WorkflowConfigurationInput.class);
+      Workflow savedWorkflow = mock(Workflow.class);
+
+      when(workflowRepository.findByIdAndStatus(workflowId, WorkflowStatus.TEMPLATE))
+          .thenReturn(Optional.of(workflow));
+      when(workflow.getWorkflowsExecuted()).thenReturn(Collections.emptyList());
+      when(workflowRepository.save(workflow)).thenReturn(savedWorkflow);
+
+      // Act
+      Workflow result = workflowService.updateWorkflowConfiguration(workflowId, input);
+
+      // Assert
+      verify(workflowConfigurationMapper).applyInput(input, workflow);
+      verify(workflowRepository).save(workflowCaptor.capture());
+      assertSame(workflow, workflowCaptor.getValue());
+      assertEquals(savedWorkflow, result);
+    }
+
+    @DisplayName("should throw ElementNotFoundException when workflow is missing")
+    @Test
+    void shouldThrowWhenWorkflowMissing() {
+      // Prepare
+      String workflowId = UUID.randomUUID().toString();
+      WorkflowConfigurationInput input = mock(WorkflowConfigurationInput.class);
+      when(workflowRepository.findByIdAndStatus(workflowId, WorkflowStatus.TEMPLATE))
+          .thenReturn(Optional.empty());
+
+      // Act & Assert
+      ElementNotFoundException exception =
+          assertThrows(
+              ElementNotFoundException.class,
+              () -> workflowService.updateWorkflowConfiguration(workflowId, input));
+      assertEquals(
+          "Workflow TEMPLATE not found. Workflow ID : " + workflowId, exception.getMessage());
+      verify(workflowRepository).findByIdAndStatus(workflowId, WorkflowStatus.TEMPLATE);
+      verifyNoInteractions(workflowConfigurationMapper);
+      verify(workflowRepository, never()).save(any());
+    }
+
+    @Test
+    @DisplayName("should map scope rules onto workflow using real mapper")
+    void shouldMapScopeRulesOntoWorkflowUsingRealMapper() {
+      String workflowId = UUID.randomUUID().toString();
+      Workflow workflow = Workflow.builder().status(WorkflowStatus.TEMPLATE).version(0).build();
+
+      WorkflowScopeRuleInput ipRule =
+          WorkflowScopeRuleInput.builder()
+              .selectedMode(ScopeRuleSelectedMode.WHITELIST)
+              .ruleSource(ScopeRuleSource.MANUAL)
+              .ruleValue("10.10.10.10")
+              .build();
+      WorkflowScopeRuleInput domainRule =
+          WorkflowScopeRuleInput.builder()
+              .selectedMode(ScopeRuleSelectedMode.WHITELIST)
+              .ruleSource(ScopeRuleSource.MANUAL)
+              .ruleValue("example.org")
+              .build();
+      WorkflowScopeRuleInput assetRule =
+          WorkflowScopeRuleInput.builder()
+              .selectedMode(ScopeRuleSelectedMode.WHITELIST)
+              .ruleSource(ScopeRuleSource.ASSET)
+              .ruleValue("asset-123")
+              .build();
+      WorkflowScopeRuleInput subnetRule =
+          WorkflowScopeRuleInput.builder()
+              .selectedMode(ScopeRuleSelectedMode.BLACKLIST)
+              .ruleSource(ScopeRuleSource.MANUAL)
+              .ruleValue("10.10.10.0/24")
+              .build();
+      WorkflowScopeRuleInput assetGroupRule =
+          WorkflowScopeRuleInput.builder()
+              .selectedMode(ScopeRuleSelectedMode.BLACKLIST)
+              .ruleSource(ScopeRuleSource.ASSET_GROUP)
+              .ruleValue("asset-group-1")
+              .build();
+
+      WorkflowConfigurationInput input = new WorkflowConfigurationInput();
+      input.setSafeModeEnabled(true);
+      input.setWorkflowScopeRules(
+          List.of(ipRule, domainRule, assetRule, subnetRule, assetGroupRule));
+
+      WorkflowConfigurationMapper realMapper = new WorkflowConfigurationMapper();
+      WorkflowService serviceWithRealMapper = new WorkflowService(workflowRepository, realMapper);
+
+      when(workflowRepository.findByIdAndStatus(workflowId, WorkflowStatus.TEMPLATE))
+          .thenReturn(Optional.of(workflow));
+      when(workflowRepository.save(any(Workflow.class))).thenAnswer(i -> i.getArgument(0));
+
+      Workflow result = serviceWithRealMapper.updateWorkflowConfiguration(workflowId, input);
+
+      assertSame(workflow, result);
+      assertEquals(5, result.getWorkflowScopeRules().size());
+      assertEquals(3, result.getWhitelist().size());
+      assertEquals(2, result.getBlacklist().size());
+
+      WorkflowScopeRule mappedIpRule =
+          result.getWhitelist().stream()
+              .filter(r -> "10.10.10.10".equals(r.getRuleValue()))
+              .findFirst()
+              .orElseThrow();
+      assertEquals(ScopeRuleValueType.IP, mappedIpRule.getValueType());
+      assertSame(workflow, mappedIpRule.getWorkflow());
+
+      WorkflowScopeRule mappedDomainRule =
+          result.getWhitelist().stream()
+              .filter(r -> "example.org".equals(r.getRuleValue()))
+              .findFirst()
+              .orElseThrow();
+      assertEquals(ScopeRuleValueType.DOMAIN, mappedDomainRule.getValueType());
+
+      WorkflowScopeRule mappedAssetRule =
+          result.getWhitelist().stream()
+              .filter(r -> "asset-123".equals(r.getRuleValue()))
+              .findFirst()
+              .orElseThrow();
+      assertEquals(ScopeRuleValueType.ASSET_ID, mappedAssetRule.getValueType());
+
+      WorkflowScopeRule mappedSubnetRule =
+          result.getBlacklist().stream()
+              .filter(r -> "10.10.10.0/24".equals(r.getRuleValue()))
+              .findFirst()
+              .orElseThrow();
+      assertEquals(ScopeRuleValueType.IP_SUBNET, mappedSubnetRule.getValueType());
+
+      WorkflowScopeRule mappedAssetGroupRule =
+          result.getBlacklist().stream()
+              .filter(r -> "asset-group-1".equals(r.getRuleValue()))
+              .findFirst()
+              .orElseThrow();
+      assertEquals(ScopeRuleValueType.ASSET_GROUP_ID, mappedAssetGroupRule.getValueType());
     }
   }
 }
